tests/ui/parser/circular_modules_main.stderr
error: circular modules: $DIR/circular_modules_main.rs -> $DIR/circular_modules_hello.rs -> $DIR/circular_modules_main.rs
  --> $DIR/circular_modules_hello.rs:4:1
   |
LL | mod circular_modules_main;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `hi_str` in module `circular_modules_main`
  --> $DIR/circular_modules_hello.rs:7:43
   |
LL |     println!("{}", circular_modules_main::hi_str());
   |                                           ^^^^^^ not found in `circular_modules_main`
   |
help: consider importing this function
   |
LL + use hi_str;
   |
help: if you import `hi_str`, refer to it directly
   |
LL -     println!("{}", circular_modules_main::hi_str());
LL +     println!("{}", hi_str());
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
